--- a/styles.css
+++ b/styles.css
@@ -170,8 +170,43 @@ section {
 		}
 	}
 }
-
-h1 {
+/* 3D Button-Like Style */
+.image-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+  }
+  
+  .image-container img {
+	margin-bottom: 10px; /* Adjust margin as needed */
+  }
+  
+  .button-like {
+	background: #4CAF50; /* Green */
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
+	border-radius: 8px; /* Rounded corners */
+	box-shadow: 0 4px #999; /* 3D effect */
+  }
+  
+  .button-like:hover {
+	background-color: #3e8e41;
+  }
+  
+  .button-like:active {
+	background-color: #3e8e41;
+	box-shadow: 0 2px #666;
+	transform: translateY(2px);
+  }
+  h1 {
 	font-size:64px;
 	line-height:1;
 	margin-bottom:10px;
@@ -379,20 +414,12 @@ h3 {
 					transition: ease 0.3s all;
 				}
 
-				&:hover {
-					figcaption {
-						opacity:1;
-						visibility:visible;
-					}
-					img {
-						transform: scale(1.2);
-					}
 				}
 
 			}
 		}
 	}
-}
+
 
 .bento {
 	.bento-grid {
